; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_RestoreScratchTarget.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_RestoreScratchTarget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SerializablePredicateLockListLock = common dso_local global i32 0, align 4
@ScratchPartitionLock = common dso_local global i32 0, align 4
@LW_EXCLUSIVE = common dso_local global i32 0, align 4
@PredicateLockTargetHash = common dso_local global i32 0, align 4
@ScratchTargetTag = common dso_local global i32 0, align 4
@ScratchTargetTagHash = common dso_local global i32 0, align 4
@HASH_ENTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @RestoreScratchTarget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RestoreScratchTarget(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @SerializablePredicateLockListLock, align 4
  %5 = call i32 @LWLockHeldByMe(i32 %4)
  %6 = call i32 @Assert(i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* @ScratchPartitionLock, align 4
  %11 = load i32, i32* @LW_EXCLUSIVE, align 4
  %12 = call i32 @LWLockAcquire(i32 %10, i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i32, i32* @PredicateLockTargetHash, align 4
  %15 = load i32, i32* @ScratchTargetTagHash, align 4
  %16 = load i32, i32* @HASH_ENTER, align 4
  %17 = call i32 @hash_search_with_hash_value(i32 %14, i32* @ScratchTargetTag, i32 %15, i32 %16, i32* %3)
  %18 = load i32, i32* %3, align 4
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i32 @Assert(i32 %21)
  %23 = load i32, i32* %2, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %13
  %26 = load i32, i32* @ScratchPartitionLock, align 4
  %27 = call i32 @LWLockRelease(i32 %26)
  br label %28

28:                                               ; preds = %25, %13
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @LWLockHeldByMe(i32) #1

declare dso_local i32 @LWLockAcquire(i32, i32) #1

declare dso_local i32 @hash_search_with_hash_value(i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @LWLockRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
